--- a/FUTURE.org
+++ b/FUTURE.org
@@ -21,3 +21,4 @@
 - Migrate to continuous integration with nix-emacs-ci
 - Document how Org2Blog works
 - Update documentation for Gutenberg
+- Add examples of warning messages  
