--- a/FUTURE.org
+++ b/FUTURE.org
@@ -23,4 +23,6 @@
 - Update documentation for Gutenberg
 - Add examples of warning messages
 - Document spell checking tools
-- Document [[https://github.com/alphapapa/org-web-tools][org-web-tools]] workflow  
+- Document [[https://github.com/alphapapa/org-web-tools][org-web-tools]] workflow
+- Shortcode documentation needs to be added
+  - Right now ~org2blog/wp-use-sourcecode-shortcode~ is only mentioned in context of one specific plugin. It is a general feature that applies to every plugin. Document this.
