--- a/FUTURE.org
+++ b/FUTURE.org
@@ -26,3 +26,4 @@
 - Shortcode documentation needs to be added
   - Right now ~org2blog/wp-use-sourcecode-shortcode~ is only mentioned in context of one specific plugin. It is a general feature that applies to every plugin. Document this.
 - Application overview for new contributors
+- Use "POST_ID" instead of "POSTID".
