Update doc for narrowing

--- a/README.org
+++ b/README.org
@@ -34,8 +34,9 @@ Blog from Org mode to WordPress.
       -  [[#automatically-configuring-your-environment][Automatically Configuring Your Environment]]
       -  [[#defining-custom-keybindings][Defining Custom Keybindings]]
       -  [[#logging-in-faster][Logging In Faster]]
-    -  [[#store-multiple-posts-in-one-file][Store Multiple Posts In One File]]
+    -  [[#store-multiple-entries-in-one-file][Store Multiple Entries In One File]]
       -  [[#using-subtrees][Using Subtrees]]
+      -  [[#using-narrowing][Using Narrowing]]
     -  [[#automatic-image-uploading][Automatic Image Uploading]]
       -  [[#how-it-works][How It Works]]
     -  [[#supported-properties][Supported Properties]]
