--- a/docs/CONTRIBUTING.org
+++ b/docs/CONTRIBUTING.org
@@ -4,12 +4,9 @@ Nice to meet you 😄.
 
 Wherever we end up going from here:
 
-Thank you for spending your precious time and valued brainpower—it is truly
-appreciated!
+Thank you for spending your precious time and valued brainpower—it is truly appreciated!
 
-This contribution guide exists so that you and other contributor will get
-the most out of your effort for the least time and expenditure required. It is
-simple—we are looking for all and everything you view as a contribution.
+This contribution guide exists so that you and other contributor will get the most out of your effort for the least time and expenditure required. It is simple—we are looking for all and everything you view as a contribution.
 
 * Areas To Contribute
 
@@ -17,36 +14,22 @@ simple—we are looking for all and everything you view as a contribution.
 - Bug triage.
 - Writing tutorials.
 - Feature ideas.
-- "Simple things" like spelling and grammar fixes, typo correction, white
-  space and formatting changes, and comment clean.
+- "Simple things" like spelling and grammar fixes, typo correction, white space and formatting changes, and comment clean.
 - Refactoring.
-- Support questions… Yes really! If you are facing it then you can't be the
-  only one. It is an opportunity to better the documentation, the package
-  itself, or more.
+- Support questions… Yes really! If you are facing it then you can't be the only one. It is an opportunity to better the documentation, the package itself, or more.
 - Whatever things that /aren't/ listed here that /should be/.
 
 * Contribution Expectations
 
-- Coding style and conventions :: The Emacs Lisp code should follow the
-     [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Tips.html][Emacs Lisp conventions]] and the [[https://github.com/bbatsov/emacs-lisp-style-guide][Emacs Lisp Style Guide]].
-- Grammar and Language :: Use a spell-checker like [[http://aspell.net/][Aspell]] and grammar-checker
-     like [[https://languagetool.org/][LanguageTool]] for your docstrings and documentation. Find writing
-     problems like weasel-words, passive-voice and duplicate words with
-     [[https://github.com/bnbeckwith/writegood-mode][Writegood Mode]]
-- Use quality-checking tools :: Use [[https://melpa.org/#/flycheck][flycheck]], [[https://github.com/purcell/package-lint][package-lint]] and
-     [[https://github.com/purcell/flycheck-package][flycheck-package]] to help you identify common errors in package metadata
-     and code. Use [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Tips.html][checkdoc]] to make sure that your package
-     follows the conventions for documentation strings.
-- *Review existing issues* :: [[https://github.com/org2blog/org2blog/issues][The issue tracker]] may already have them solved,
-     otherwise they are a great place to start
+- Coding style and conventions :: The Emacs Lisp code should follow the [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Tips.html][Emacs Lisp conventions]] and the [[https://github.com/bbatsov/emacs-lisp-style-guide][Emacs Lisp Style Guide]].
+- Grammar and Language :: Use a spell-checker like [[http://aspell.net/][Aspell]] and grammar-checker like [[https://languagetool.org/][LanguageTool]] for your docstrings and documentation. Find writing problems like weasel-words, passive-voice and duplicate words with [[https://github.com/bnbeckwith/writegood-mode][Writegood Mode]]
+- Use quality-checking tools :: Use [[https://melpa.org/#/flycheck][flycheck]], [[https://github.com/purcell/package-lint][package-lint]] and [[https://github.com/purcell/flycheck-package][flycheck-package]] to help you identify common errors in package metadata and code. Use [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Tips.html][checkdoc]] to make sure that your package follows the conventions for documentation strings.
+- *Review existing issues* :: [[https://github.com/org2blog/org2blog/issues][The issue tracker]] may already have them solved, otherwise they are a great place to start
 - *The Future* :: [[https://github.com/org2blog/org2blog/blob/master/FUTURE.org][The future file]] may already have new features listed, and if it doesn't then maybe it should. Either way it might be a great place to start.
-- *Accept the license* :: Org2Blog is licensed [[https://www.gnu.org/licenses/gpl-3.0.en.html][GPLv3]]: you understand and submit
-     your code under those terms.
+- *Accept the license* :: Org2Blog is licensed [[https://www.gnu.org/licenses/gpl-3.0.en.html][GPLv3]]: you understand and submit your code under those terms.
 
 * Conclusion
 
-That is it. That is everything. If you made it this far then kudos for you to
-sticking around. Thank you for spending your time here. Hope you keep blogging
-and having fun with Org2Blog.
+That is it. That is everything. If you made it this far then kudos for you to sticking around. Thank you for spending your time here. Hope you keep blogging and having fun with Org2Blog.
 
 Thanks and have a great day.
