--- a/docs/CONTRIBUTING.org
+++ b/docs/CONTRIBUTING.org
@@ -30,6 +30,6 @@ This contribution guide exists so that you and other contributors will get the m
 
 * Conclusion
 
-That is it. That is everything. If you made it this far then kudos for you to sticking around. Thank you for spending your time here. Hope you keep blogging and having fun with Org2Blog.
+That is it. That is everything. If you made it this far then kudos to you for sticking around. Thank you for spending your time here. Hope you keep blogging and having fun with Org2Blog.
 
 Thanks and have a great day.
