--- a/HISTORY.org
+++ b/HISTORY.org
@@ -2,39 +2,25 @@
 
 ** Users
 
-- Adds a simple and powerful user interface exposing every aspect of
-  Org2Blog—many of which you may never have known even existed before.
-  - Use the one-keypress help menu to look up the documentation behind every
-    menu entry along with the function name behind it if you want to bind it
-    to a key.
-- Includes the manual built-in to the application. It is the README.org so you
-  don't have to go to the web page to read it.
-- Expands on and revises every aspect of documentation including explanations
-  and screenshots.
-  - Blogging styles and strategies covered range from first-time blogging to
-    advanced use with multiple blogs and diverse workflows.
-- Adds an API for automating bulk import of Org files when you want to move
-  from another Org based blogging platform to Org2Blog.
+- Adds a simple and powerful user interface exposing every aspect of Org2Blog—many of which you may never have known even existed before.
+  - Use the one-keypress help menu to look up the documentation behind every menu entry along with the function name behind it if you want to bind it to a key.
+- Includes the manual built-in to the application. It is the README.org so you don't have to go to the web page to read it.
+- Expands on and revises every aspect of documentation including explanations and screenshots.
+  - Blogging styles and strategies covered range from first-time blogging to advanced use with multiple blogs and diverse workflows.
+- Adds an API for automating bulk import of Org files when you want to move from another Org based blogging platform to Org2Blog.
 - Added a new logo:
-  - A WordPress operator's inky hand, colored by Org mode, cradles a special
-    press plate for Org2Blog: Org2Blog's first logo. Thank you Cari at
-    [[http://sepiarainbow.com/][Sepia Rainbow Designs]] for this brilliant logo.
-- Adds a built-in README with links to learn more about this project, how to
-  start having fun blogging, and even how Free Software is critical to you as
-  a user and society as a whole.
+  - A WordPress operator's inky hand, colored by Org mode, cradles a special press plate for Org2Blog: Org2Blog's first logo. Thank you Cari at [[http://sepiarainbow.com/][Sepia Rainbow Designs]] for this brilliant logo.
+- Adds a built-in README with links to learn more about this project, how to start having fun blogging, and even how Free Software is critical to you as a user and society as a whole.
 
 ** Developers
 
 - Now requires at least Emacs 26.3 and Org mode 9.1.9.
-- Expanded and revised every aspect of documentation including running from
-  the source code instead of a package and debugging various network issues.
+- Expanded and revised every aspect of documentation including running from the source code instead of a package and debugging various network issues.
 - Adds steps for rebuilding the readme
 - Revises contribution expectations
-- Adds scripted system integration testing covering 50% of Org2Blog's
-  functionality
+- Adds scripted system integration testing covering 50% of Org2Blog's functionality
 - Imports ~metaweblog~
-- Adds ~org2blog-def-update-artifacts~ to update version numbers across all
-  package files. See ~org2blog-def--package~ for details.
+- Adds ~org2blog-def-update-artifacts~ to update version numbers across all package files. See ~org2blog-def--package~ for details.
 - Names refactored to standardize language.
 - All code brought up to GNU and MELPA coding and packaging standards.
 
@@ -42,8 +28,7 @@
 
 - Adds steps for all aspects of package maintenance
 - Adds function deprecations for future future retirement
-- Blog ID will only ever be 1: Org2Blog doesn't support multi-site installs.
-  See ~org2blog--default-blogid~.
+- Blog ID will only ever be 1: Org2Blog doesn't support multi-site installs. See ~org2blog--default-blogid~.
 
 ** Fixes
 
