--- a/docs/DebuggingStories.org
+++ b/docs/DebuggingStories.org
@@ -1,28 +1,18 @@
 * Debugging Stories
 
-Over the years various issues have surfaced. Most of them weren't worth
-mentioning because they were to small. But some of them were big that they
-deserved getting written down here!
+Over the years various issues have surfaced. Most of them weren't worth mentioning because they were to small. But some of them were big that they deserved getting written down here!
 
-After studying how debugging works you might enjoy seeing the outcome of an
-example or two.
+After studying how debugging works you might enjoy seeing the outcome of an example or two.
 
 ** Can't Post Unicode
 
-Suddenly Org2Blog couldn't post any content that contained Unicode characters.
-The problem was that when Emacs 26 came out its HTTP request library began
-enforcing correct byte usage for Unicode. The library itself worked fine.
-However clients of the library had to change. The solution was nearly a
-[[https://github.com/hexmode/xml-rpc-el/commit/8ee416cb7644eef4ca8edda5ea79b1c670555ad0][one line fix]].
+Suddenly Org2Blog couldn't post any content that contained Unicode characters. The problem was that when Emacs 26 came out its HTTP request library began enforcing correct byte usage for Unicode. The library itself worked fine. However clients of the library had to change. The solution was nearly a [[https://github.com/hexmode/xml-rpc-el/commit/8ee416cb7644eef4ca8edda5ea79b1c670555ad0][one line fix]].
 
 ** Inexplicably Can't Login Or Do Anything
 
-For years everything was fine using Org2Blog, it just worked on my box. Then
-once in a while it didn't. And then it only worked one time out of ten. This
-was a major issue.
+For years everything was fine using Org2Blog, it just worked on my box. Then once in a while it didn't. And then it only worked one time out of ten. This was a major issue.
 
-After testing every combination of every library nothing obvious jumps out.
-Finally I pull out WireShark and curl to see what is happening.
+After testing every combination of every library nothing obvious jumps out. Finally I pull out WireShark and curl to see what is happening.
 
 Take a look—
 
@@ -34,11 +24,7 @@ Here is what it looks like when it /does/ work using curl:
 
 [[file:../images/WireSharpTLSV1Dot2Dump.png]]
 
-Debugging at the communications layer was an absolute last resort—and it
-payed off. Unbeknownst to me the TLS version used is negotiated between the client
-and the server. For some reason my GnuTLS was negotiating v1.3 with the server
-and puked resulting it sending everything unencrypted over HTTP instead of
-encrypted over HTTPS!
+Debugging at the communications layer was an absolute last resort—and it payed off. Unbeknownst to me the TLS version used is negotiated between the client and the server. For some reason my GnuTLS was negotiating v1.3 with the server and puked resulting it sending everything unencrypted over HTTP instead of encrypted over HTTPS!
 
 The solution was pretty simple: forbid GnuTLS from using TLSv1.3:
 
@@ -49,7 +35,6 @@ The solution was pretty simple: forbid GnuTLS from using TLSv1.3:
 
 At least that was the /first/ solution.
 
-As it would turn out this issue was caused by a bug in GnuTLS and by changing
-this setting it uninentionally avoided the error.
+As it would turn out this issue was caused by a bug in GnuTLS and by changing this setting it uninentionally avoided the error.
 
 The issue was resolved in Emacs 26.3.
